--- a/week_1/Day_4/Core/Profile-Page/index.html
+++ b/week_1/Day_4/Core/Profile-Page/index.html
@@ -13,13 +13,13 @@
     <div class="container">
         <div class="navbar">
             <ul class="nav-links">
-                <div class="pro">
+                
                 <li><h1 class="nav-title">Profile</h1></li>
-                </div>
+                
                 <div class="pre">
-                <li><a href="#">Home</a></li>
-                <li><a href="#" class="active">My Profile</a></li>
-                <li><a href="#">Find Connections</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#" class="active">My Profile</a></li>
+                    <li><a href="#">Find Connections</a></li>
                 </div>
             </ul>
             <button class="btn">Sign Out</button>
@@ -95,19 +95,19 @@
                         </div>
                     </div>
                     <div class="information-3">
-                        <div class="Adrie">
+                        <div class="personne">
                             <img src="./img/adrien-s.jpg" alt="adrien" width="30px">
                             <p>Adrien D</p>
                         </div>
-                        <div class="Ane">
+                        <div class="Personne">
                             <img src="./img/anne-s.jpg" alt="anne" width="30px">
                             <p>Anne J</p>
                         </div>
-                        <div class="Alaynee">
+                        <div class="personne">
                             <img src="./img/alayne-s.jpg" alt="alayne" width="30px">
                             <p>Alayne T</p>
                         </div>
-                        <div class="Arry">
+                        <div class="Personne">
                             <img src="./img/arry-s.jpg" alt="Arry" width="30px">
                             <p>Arry Y</p>
                         </div>
