profil user with js

--- a/week_1/Day_4/Core/Profile-Page/index.html
+++ b/week_1/Day_4/Core/Profile-Page/index.html
@@ -12,24 +12,22 @@
 <body>
     <div class="container">
         <div class="navbar">
+            <h1 class="nav-title">Profile</h1>
             <ul class="nav-links">
-                
-                <li><h1 class="nav-title">Profile</h1></li>
-                
                 <div class="pre">
                     <li><a href="#">Home</a></li>
                     <li><a href="#" class="active">My Profile</a></li>
                     <li><a href="#">Find Connections</a></li>
+                    <button class="btn">Sign Out</button>
                 </div>
             </ul>
-            <button class="btn">Sign Out</button>
 
         </div>
         <div class="main">
             <div class="one">
                 <div class="profile">
                     <div class="bar"></div>
-                    <img src="./img/user-circle.png" alt="user" class="taswira" width="60px">
+                    <img src="./img/jane-m.jpg" alt="user" class="taswira" width="60px">
                     <div class="information">
                         <h1>Jane Doe</h1>
                         <p class="Seattle"> <img src="./img/map-marker.png" alt="1" width="10px"> Seattle</p>
@@ -63,7 +61,7 @@
                     <div class="bar2">
                         <div class="bar-1">
                             <h3><span> 2 </span> Your Connections</h3>
-                            </div>
+                        </div>
                     </div>
                     <div class="information-2">
                         <div class="tod">
